// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider > Snapshots > matches default snapshot 1`] = `
<span
  aria-disabled="false"
  class="slider slider--variant-default slider--size-default"
  data-orientation="horizontal"
  data-testid="slider"
  dir="ltr"
  style="--radix-slider-thumb-transform: translateX(-50%);"
>
  <span
    class="slider__track slider__track--variant-default slider__track--size-default slider__track--orientation-horizontal"
    data-orientation="horizontal"
  >
    <span
      class="slider__range slider__range--variant-default slider__range--orientation-horizontal"
      data-orientation="horizontal"
      style="left: 0%; right: 100%;"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="slider__thumb slider__thumb--variant-default slider__thumb--size-default"
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
      tabindex="0"
    />
  </span>
</span>
`;

exports[`Slider > Snapshots > matches disabled state snapshot 1`] = `
<span
  aria-disabled="true"
  class="slider slider--variant-default slider--size-default"
  data-disabled=""
  data-orientation="horizontal"
  data-testid="slider"
  dir="ltr"
  style="--radix-slider-thumb-transform: translateX(-50%);"
>
  <span
    class="slider__track slider__track--variant-default slider__track--size-default slider__track--orientation-horizontal"
    data-disabled=""
    data-orientation="horizontal"
  >
    <span
      class="slider__range slider__range--variant-default slider__range--orientation-horizontal"
      data-disabled=""
      data-orientation="horizontal"
      style="left: 0%; right: 100%;"
    />
  </span>
  <span
    style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
  >
    <span
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="0"
      class="slider__thumb slider__thumb--variant-default slider__thumb--size-default"
      data-disabled=""
      data-orientation="horizontal"
      data-radix-collection-item=""
      role="slider"
      style=""
    />
  </span>
</span>
`;

exports[`Slider > Snapshots > matches loading state snapshot 1`] = `
<div
  class="slider__loading"
>
  <div
    class="slider__loading-track"
  />
  <div
    class="slider__loading-spinner"
  />
</div>
`;
